# Netstore

./: CMakeLists.txt  Command.cpp  Command.h  Connection.cpp  Connection.h  FileSender.cpp  FileSender.h  Makefile  Message.cpp  Message.h  README.md  client.cpp  client.h  err.cpp  err.h  group.cpp  group.h  netstoreclient.cpp  netstoreserver.cpp  server.cpp  server.h
